# fastapi_azure_starter

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.gunicorn  README.md  alembic.ini  docker-compose.debug.yml  gunicorn.conf.py  main.py  pyproject.toml  setup.cfg  tracer_middleware.py
.dev/: pgadmin_servers.json
alembic/: env.py
app/: __init__.py  azure_scheme.py  config.py  database.py  limiter.py  logging.py  main.py  responses.py  settings.py  worker.py
app/database/: __init__.py
app/database/tables/: __init__.py  sample_table.py
app/middleware/: __init__.py  request_tracing.py  uncaught_exception_handler.py
app/models/: meta.py  sample.py
app/repositories/: __init__.py  sample_repository.py
app/routers/: samples.py  users.py
app/security/: __init__.py  auth.py  exceptions.py  openid_config.py  user.py  util.py
app/services/: sample_service.py
app/telemetry/: azure_monitor.py  logging.py  otel.py
app/util/: logging.py  otel.py  tracing.py
app/util/instrumentation/: __init__.py  httpx_instrumentation.py
dev/: servers.json
migrations/: env.py
migrations/versions/: 927c6a520d34_create_sample_table.py  c0bb98f10032_create_sample_table.py
scripts/: Run-Tests.ps1  Setup-Dependencies.ps1  Update-Dependencies.ps1
tests/: test_app.py  test_client.py  test_migrations.py  test_samples.py  test_users.py
tests/_helper/: client.py  security.py  settings.py
