[tool.poetry]
name = "fastapi-starter"
version = "0.1.0"
description = ""
authors = ["Timo Wilhelm <mail@timowilhelm.com>"]
readme = "README.md"
packages = [{ include = "fastapi_starter" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = { extras = ["dotenv"], version = "^1.10.2" }
fastapi = "^0.85.1"
opencensus = "^0.11.0"
opencensus-ext-azure = "^1.1.7"
slowapi = "^0.1.6"
opencensus-ext-logging = "^0.1.1"
httpx = "^0.23.0"
redis = "^4.3.4"


[tool.poetry.group.dev.dependencies]
uvicorn = { extras = ["standard"], version = "^0.19.0" }
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
flake8-bugbear = "^22.10.27"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
color = false             # color output breaks vscode python extension
target-version = ['py39']

[tool.isort]
profile = "black"
